# Hand_Tracking

./: .gitattributes  .gitignore  .gitmodules  README.md  aa.bag  desktop.ini  fe.bag
cam_node/src/: cam.cpp  cam.py
final/: CMakeLists.txt  package.xml
final/src/: NN.py  final_node.py  test_node.py  visualize.py
glovehand/: CMakeLists.txt  package.xml
glovehand/data/: base_0ms_glove.txt  base_0ms_hand.txt  base_150ms_glove.txt  base_150ms_hand.txt  base_200ms_glove.txt  base_200ms_hand.txt  base_300ms_glove.txt  base_300ms_hand.txt  dual_0ms_glove.txt  dual_0ms_hand.txt  dual_150ms_glove.txt  dual_150ms_hand.txt  dual_200ms_glove.txt  dual_200ms_hand.txt  dual_300ms_glove.txt  dual_300ms_hand.txt
glovehand/launch/: dual_proxy.launch  test.launch
glovehand/newdata/: base_0ms_glove.txt  base_0ms_hand.txt  base_150ms_glove.txt  base_150ms_hand.txt  base_500ms_glove.txt  base_500ms_hand.txt  dual_0ms_glove.txt  dual_0ms_hand.txt  dual_150ms_glove.txt  dual_150ms_hand.txt  dual_500ms_glove.txt  dual_500ms_hand.txt
glovehand/pinchdata/: base_0ms_glove.txt  base_0ms_hand.txt  base_10ms_glove.txt  base_10ms_hand.txt  base_150ms_glove.txt  base_150ms_hand.txt  base_200ms_glove.txt  base_500ms_glove.txt  base_500ms_hand.txt  dual_0ms_glove.txt  dual_0ms_hand.txt  dual_150ms_glove.txt  dual_150ms_hand.txt  dual_200ms_glove.txt  dual_200ms_hand.txt  dual_500ms_glove.txt  dual_500ms_hand.txt
glovehand/src/: communicator.cpp  glove_callback.cpp  hand_callback.cpp  hand_publish_test.cpp  motor_test.cpp  publish_test.cpp  subscribe_test.cpp
include/: HMD.h  HMD_number.h  pose_utils.h
model/: bone.py  data_preprocess.ipynb  model.py  new_model.py  train.ipynb
optoforce/: CMakeLists.txt
optoforce/launch/: optoforce_merged.launch
optoforce/src/: optoforce_node.py
point_recorder/: CMakeLists.txt  package.xml
point_recorder/src/: point_recorder.py
src/: .gitmodules  HMD.cpp  HMD_init.cpp  HMD_publish.cpp  pose_utils.cpp  utils.cpp
src/cam_node/: CMakeLists.txt  package.xml
src/dynamixel_sdk/: CMakeLists.txt
src/final/: CMakeLists.txt
src/final/src/: NN.py  final_node.py  run_hand_right.py  visualize.py
src/hand_urdf_discription/: CMakeLists.txt  README.md  package.xml
src/hand_urdf_discription/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch  hand_display.launch  simulation.launch
src/hand_urdf_discription/meshes/: hand_urdf.urdf  hand_urdf.xml  simulation_scene.xml
src/hand_urdf_discription/mujoco_model/: hand_urdf.xml
src/hand_urdf_discription/scripts/: command_tester.py  command_tester3.py  controller.py
src/hand_urdf_discription/urdf/: hand_urdf.gazebo  hand_urdf.trans  hand_urdf.xacro  materials.xacro
src/vr/: CMakeLists.txt  package.xml
src/vr/include/: HMD.h  HMD_number.h  hand_number.h  ik.h  lie_utils.h  pose_utils.h  utils.h
src/vr/src/: HMD.cpp  HMD_init.cpp  HMD_main.cpp  HMD_publish.cpp  Ik.cpp  lie_utils.cpp  pose_utils.cpp  utils.cpp
src/vr_launch/: CMakeLists.txt  package.xml
src/vr_launch/launch/: vr_start.launch
vr/: CMakeLists.txt  package.xml
vr/include/: HMD.h  HMD_number.h  ik.h  lie_utils.h  pose_utils.h  utils.h
vr/msg/: HandSyncData.msg
vr/src/: HMD.cpp  HMD_init.cpp  HMD_main.cpp  HMD_publish.cpp  Ik.cpp  lie_utils.cpp  pose_utils.cpp  projection.cpp
